--- a/index.html
+++ b/index.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="">
-  <title></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travel-Website</title>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
 </head>
 
 <body>
-  
+
+    <section class="header">
+        <div class="container">
+            <img src="images/triptok.png">
+            <button type="button" class="login-btn">Login</button>
+        </div>
+        <h1>Travel Across The Globe</h1>
+        <p>This is my first Design of Static Website.</p>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search Country or City">
+            <div class="input-group-append">
+                <button type="Submit" class="input-group-text btn">Search</button>
+            </div>
+        </div>
+    </section>
+    <section class="features">
+        <h1>Featured Destinations</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="feature-box">
+                        <div class="feature-img">
+                            <img src="images/1.jpg">
+                            <div class="price">
+                                <p>78$</p>
+                            </div>
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star-half-o"></i>
+                                <i class="fa fa-star-o"></i>
+                            </div>
+                        </div>
+                        <div class="feature-details">
+                            <h4>Los Angles</h4>
+                            <p>This is best Famous Place Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam praesentium expedita quos ut optio atque, neque possimus officiis consectetur corrupti commodi totam voluptate sint unde nam illum aliquid aut voluptatem.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
